--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         // Function to add Google Translate script
         function addGoogleTranslate() {
             const googleTranslateScript = document.createElement('script');
-            googleTranslateScript.src = "https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit";
+            googleTranslateScript.src = "http://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit";
             googleTranslateScript.async = true;
             document.body.appendChild(googleTranslateScript);
 
